update resourcelist header styles to fix alignment container alignment

--- a/polaris-react/src/components/ResourceList/ResourceList.scss
+++ b/polaris-react/src/components/ResourceList/ResourceList.scss
@@ -107,9 +107,8 @@ $item-wrapper-loading-height: 64px;
   #{$se23} & {
     right: var(--p-space-3);
     left: var(--p-space-3);
-    top: var(--p-space-2);
+    top: var(--p-space-3);
     min-height: 28px;
-    align-items: center;
   }
 
   .HeaderWrapper-inSelectMode & {
